# rudimentary-image-pixelation-tool

./: CMakeLists.txt  README.md
src/: ImageProcessor.cpp  ImageProcessor.h  main.cpp
